--- a/app/views/messages/destroy.html.erb
+++ b/app/views/messages/destroy.html.erb
@@ -1,5 +1,5 @@
-<p>The <em>Eintagsmessage</em> has been destroyed!</p>
+<p class="alert alert-info">The <em>Eintagsmessage</em> has been destroyed!</p>
 
 <pre><%= @message.body%></pre>
 
-<%= link_to 'Create a new Eintagsmessage', messages_path%>
+<%= link_to 'Create new Eintagsmessage', messages_path, class: 'btn btn-lg btn-primary'%>
