--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,6 @@
-<h2>Message</h2>
-
 <%= form_for(@message) do |f| %>
-  <%= f.text_area :body %>
-  <%= f.submit %>
+  <div class="form-group">
+    <%= f.text_area :body, class: 'form-control input-lg', rows: 5 %>
+  </div>
+  <%= f.submit class: 'btn btn-primary btn-lg' %>
 <% end %>
